<resources>
    <string name="app_name">Coding App</string>
    <string name="app_public_name">/coding_app:</string>
    <string name="intro_text">Learn to code.\nFree for students</string>
    <string name="carinhapc_description">Carinha sentado usando o pc</string>
    <string name="start_button_content">Start</string>
    <string name="courses_string">Courses</string>
    <string name="sign_in_string">Google Sign In</string>
    <string name="weather_now_string">Weather - now</string>
    <string name="weather_history_string">Weather - history</string>
    <string name="google_maps_string">Google Maps</string>
    <string name="content_botao_voltar">botao de voltar</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="city">City</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="description">Description</string>
    <string name="weather_icon">Weather icon</string>
    <string name="string_weather_icon" />
    <string name="time">Time</string>
    <string name="_20_lessons">20 lessons</string>
    <string name="_15_lessons">15 lessons</string>
    <string name="python_tutorial_nfor_beginners">Python Tutorial\nfor Beginners</string>
    <string name="php_text">PHP for\nDummies</string>
    <string name="html5">HTML5</string>
    <string name="watch_python_text">Click here to\nwatch Module 1</string>
</resources>